# chargepop

./: .gitignore  ChangeLog.md  LICENSE  Procfile  README.md  chargepop.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Shop.hs  User.hs
